[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Matrix_Element.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[node name="Element" type="Label"]
margin_right = 77.31
margin_bottom = 53.35
rect_min_size = Vector2( 77.31, 42.95 )
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="."]
visible = false
margin_left = -38.648
margin_top = 30.91
margin_right = 115.442
margin_bottom = 46.91
min_value = -4.0
max_value = 4.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_Element_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Element_mouse_exited"]
[connection signal="mouse_entered" from="HSlider" to="." method="_on_HSlider_mouse_entered"]
[connection signal="mouse_exited" from="HSlider" to="." method="_on_HSlider_mouse_exited"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
